fix!:restructuring folder layout #2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     # Step 3: Build the project using Maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      working-directory: ./relative/path/to/project/root
+      working-directory: dungeonofdoom
 
     # Step 4: Run unit tests
     - name: Run tests
