--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Assignment1 Java CI with Maven
+name: dungeon of doom ci
 
 on:
   push:
@@ -40,5 +32,5 @@ jobs:
 
     # Step 4: Run unit tests
     - name: Run tests
-      working-directory: demo
       run: mvn test
+      working-directory: dungeonofdoom
