--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Maven-specific ignores
-/target/
+dungeonofdoom/target/
 !.mvn/wrapper/maven-wrapper.jar
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.properties
