--- a/dungeonofdoom/pom.xml
+++ b/dungeonofdoom/pom.xml
@@ -26,6 +26,20 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.15.2</version> 
+            <scope>test</scope>
+        </dependency>
+
+        
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.15.2</version> 
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
