--- a/dungeonofdoom/pom.xml
+++ b/dungeonofdoom/pom.xml
@@ -41,5 +41,11 @@
             <version>5.15.2</version> 
             <scope>test</scope>
         </dependency>
+    
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.13.0</version>
+      </dependency>
     </dependencies>
 </project>
